第一个云函数

--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,6 @@
 {
 	"description": "项目配置文件",
+  "cloudfunctionRoot": "./functions",
 	"packOptions": {
 		"ignore": []
 	},
@@ -8,10 +9,11 @@
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"nodeModules": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.3.0",
+	"libVersion": "2.4.0",
 	"appid": "wxe6200ad12c8e8acd",
 	"projectname": "EnglishTest",
 	"debugOptions": {
